Avanzo con el punto 1

--- a/TP_01/TP_01.md
+++ b/TP_01/TP_01.md
@@ -1,5 +1,15 @@
 
 * Los documentos se procesan linea a linea. Nombre propio separado en 2 lineas?
-Si las parseo, como me fijo los nombres propios?
+Si las parseo, como me fijo los nombres propios? Ya lo pregunte
 
-Lo del largo del termino, debería ser despues de haber normaliado, traducido, etc.
+Lo del largo del termino, debería ser despues de haber normaliado, traducido, etc. Ya lo pregunte
+
+Elegir longitud minima y maxima tokens, documentar porque esa decision.
+
+academicasfcfmnfchficesipaudedainformesdepartamentosareascargosdedicacioncaracterinscripcionresolucion
+
+Porque no se limito ese termino?
+
+Cantidad de terminos es cantidaad univoca de terminos? Sería como las claves del diccionario?
+
+Promedio de terminos de los documentos? Sumo todas las frecuencias de terminos y las divido por la cantida de documentoss? O es la cantidad de claves del diccionario dividido la cantidad de documentos?
