Avanzo con el ejercicio 3 y 4

--- a/TP_01/TP_01.md
+++ b/TP_01/TP_01.md
@@ -95,7 +95,84 @@ c) Números (por ejemplo, cantidades, teléfonos)
 d ) Nombres propios (por ejemplo, Villa Carlos Paz, Manuel Belgrano, etc.) y los trate como un único
 token.
 Genere y almacene la misma información que en el caso anterior.
+
+
+
+
+
+## 3. A partir del programa del ejercicio 1, incluya un proceso de stemming, use la librerı́a NLTK (Natural Language Toolkit) y revise qué algoritmos soporta para español e inglés.
+
+De la librería NLTK utilicé el módulo nltk.stem.snowball, ya que tiene soporte tanto para español como para inglés.
+
+Los cambios realizados en el código del ejercicio 3, respecto al del ejercicio 1, se enfocan en las condiciones para que un token sea o no un término.
+
+Especificamente, dado un token, este es sometido a un proceso de Stemming.
+Luego, el token y el resultado del proceso mencionado anteriormente, no deben estar en la lista de palabras vacias.
+
+Por otro lado, el resultado del proceso de Stemming, debe tener una longitud válida para ser un término.
+
+Finalmente si las condiciones mencionadas anteriormente se cumplen, se incrementa la Collection Frecuency del término, que es el resultado del processo de Stemming.
+
+Además, se guarda en un diccionario para cada raiz obtenida con el Stemmer, de que tokens fue obtenida, para para poder realizar un debug a futuro. 
+
+Ejemplo: competent->{'competencia': 22, 'competencias': 44, 'competente': 9, 'competentes': 1}
+La raiz "competent", fue obtenida de los tokens: "competencia" 22 veces, "competencias" 44 veces, "competente" 9 veces y "competentes" 1 vez.
+
+## Luego de modificar su programa, corra nuevamente el proceso del ejercicio 1 y analice los cambios en la colección. ¿Qué implica este resultado?
+
+Luego de correr el programa del ejercicio 1, y el del ejercicio 3, ambos con el mismo archivo de palabras vacías y la misma longitud minima y máxima permitida para los términos, noté las siguientes diferencias:
+
+* El programa del ejercicio 1 extrajo 32279 términos y el del ejercicio 3, 23028 términos.
+    * Concretamente 9251 términos menos extraidos por el programa del ejercicio 3. Esto tiene sentido ya que estoy contando la cantidad de terminos diferentes extraidos. En el ejercicio 1, los tokens "universidad" y "universidades", son dos términos diferentes, pero sin embargo, en el ejercicio 3, son el mismo término.
+
+* En el ejercicio 1, el promedio de términos extraidos por documentos es de 64.81726907630522, mientras que en el ejercicio 3, es de 46.24096385542169.
+    * Al igual que el item anterior, este comportamiento era de esperarse, ya que tokens con la misma raiz, pero diferentes, en el ejercicio 1, son tratados como términos distintos, por lo que el promedio de términos que se van a extrar de cada documento, es mayor que en el ejercicio 3.
+
+* En las estadisticas del ejercicio 1, el largo promedio de un término es de 9.15722296229747 caracteres, mientras que en las del ejercicio 3, es de 8.346013548723294 caracteres.
+    * Este comportamiento puede ser explicado debido a que, los términos del ejercicio 1, son los token que son univocos en la colección, luego de haber sido normalizados. Pero en el ejercicio 3, los términos son la raiz de los token, que obviamente es de longitud inferior que el token del que se extrae. Por lo tanto la longitud promedio de los términos del ejercicio 3 va a ser inferior a la del ejercicio 1.
+
+* La cantidad de términos del documento mas largo en el ejercicio 1 es de 7581, mientras que en el ejercicio 3 es de 4890. La explicación es similar a la del primer y segundo item de esta lista, los documentos tienen menos términos, debido al proceso de stemming.
+
+* La cantidad de términos que aparecen una sola vez en la colección, en el ejercicio 1 es de 16898, mientras que en el ejercicio 3 es de 11730. Esto tiene sentido, dado que por ejemplo, en el ejercicio 1, un término que aparece una sola vez en toda la colección es "robot", por lo tanto, este hace que se incremente el contador. Mientras que en el ejercicio 3, el token "robot" y el token "robotica" tienen la misma raiz, por lo que el término que los agrupa a ambos es "robot", y la CF de este término, es de 3 (1 vez  por el token "robot" y 2 veces por el token "robotica") por lo que ya no produce un incremento en el contador de los términos que aparecen una sola vez en la colección. 
+Esto explica por qué el contador del ejercicio 3 es inferior al contador del ejercicio 1.
+
+* En las frecuencias de cada uno de los programas, en el ejercicio 1, "argentina" es un término que tiene una CF de 774, sin embargo "argentina" tiene una CF de 921 en el ejercicio 3.
+    * Dado que en este ultimo ejercicio, este termino incluye a los tokens: "argentina" 774 veces, "argentino" 89 veces, "argentine" 1 vez, "argentinas" 30 veces y "argentinos" 27 veces.
+
+
+## Busque ejemplos de pares de términos que tienen la misma raı́z pero que el stemmer los trató diferente y términos que son diferentes y se los trató igual.
+
+En cuanto a ejemplos donde el stemmer trato de igual forma a términos que son diferentes, encontré:
+* Para uno de los términos más frecuentes "univers" con una CF de 2416.
+    * 2239 veces, el stemmer paso de "universidad" a "univers".
+    * 171 veces, de "universidades" a "univers".
+    * 3 veces, de "universo" a "univers"
+
+* Para el término "mart"
+    * 87 veces, el stemmer pasó de martes a "mart"
+    * 12 veces, de "marta" a "mart"
+
+Podemos ver que trató de igual forma a términos que son diferentes.
+
+Por otro lado, para dar ejemplos con terminos con la misma raiz pero que el stemmer trató diferente:
+
+* Los términos: "cientifico", "cientificos", "cientificas", "cientificamente". 
+Fueron tratados de forma distinta que los términos: "ciencias" y "ciencia".
+
+* El término: "libreria" fué tratado de forma diferente que los términos: "libros", "libro".
+
+* El término "enamorado" fué tratado de forma distinta que el los términos: "amor", "amorosas" y "amorosamente"
+
+4
+
+Simplifiqué el tokenizador con respecto a los puntos anteriores para no agregar tiempos de procesamiento adicionales y ver reflejado lo mejor posible los tiempos de cada Stemmer.
+
+Contar pasos de transformacion de token`
+
 <!---
+
+Agregar allgun plot??
+
 3. A partir del programa del ejercicio 1, incluya un proceso de stemming 2 . Luego de modificar su programa,
 corra nuevamente el proceso del ejercicio 1 y analice los cambios en la colección. ¿Qué implica este resultado?
 Busque ejemplos de pares de términos que tienen la misma raı́z pero que el stemmer los trató diferente y
