Avanzo con el ejercicio 4

--- a/TP_01/TP_01.md
+++ b/TP_01/TP_01.md
@@ -163,11 +163,80 @@ Fueron tratados de forma distinta que los términos: "ciencias" y "ciencia".
 
 * El término "enamorado" fué tratado de forma distinta que el los términos: "amor", "amorosas" y "amorosamente"
 
-4
+## 4. Sobre la colección CISI3 , ejecute los stemmers de Porter y Lancaster provistos en el módulo nltk.stem. Compare: cantidad de términos resultantes
+
+La cantidad de términos del stemmer Lancaster es 17251. Mientras que la cantidad del Porter es de 18074. Este último tiene 823 términos más.
+
+Sometiendo a cada token a un procesamiento, eliminando acentos y caracteres no alfanumericos, la cantidad de términos obtenidos por Lancaster es de 8890, mientras que la de porter es de 9962. Una cantidad de términos significativamente menor, pero mayor diferencia entre los diferentes Stemmers, concretamente 1072 términos.
+
+## Compare: Resultado 1 a 1
+
+Como era de esperarse, ambos stemmers tratan de igual forma a los numeros, no realizan ninguna modificación.
+
+En cuanto a palabras que los stemmers tratan de igual forma:
+
+* in -> in
+* of -> of
+* the -> the
+* wich -> wich
+* to -> to
+* as -> as
+
+* suggested -> suggest
+* participated -> particip
+* produced -> produc
+
+* dealing -> deal
+* representing -> repres
+
+* information -> inform
+* importance -> import
+
+* eight -> eight
+* seventeen -> seventeen
+* four -> four
+
+Las palabras que los stemmers tratan de manera diferente:
+
+* Palabra: specifying
+    * Porter: specifi
+    * Lancaster: spec
+
+* Palabra: balancing
+    * Porter: balanc
+    * Lancaster: bal
+
+* Palabra: water
+    * Porter: water
+    * Lancaster: wat
+    
+* Palabra: fifth
+    * Porter: fifth
+    * Lancaster: fif
+
+* Palabra: seventies
+    * Porter: seventi
+    * Lancaster: seventy
+
+* Palabra: preclassified
+    * Porter: preclassifi
+    * Lancaster: preclass
+
+* Palabra: queried
+    * Porter: queri
+    * Lancaster: query
+
+Vemos que en ambos casos, tanto en palabras que tratan de igual forma, como de manera diferente, hay palabras con "ing", hay palabras terminadas con "ed", hay palabras que hacen referencia a numeros.
+
+## Compare: tiempo de ejecución para toda la colección
 
 Simplifiqué el tokenizador con respecto a los puntos anteriores para no agregar tiempos de procesamiento adicionales y ver reflejado lo mejor posible los tiempos de cada Stemmer.
 
-Contar pasos de transformacion de token`
+Unicamente leyendo linea a linea cada uno de los archivos de la colección, separando estas por espacios, aplicando solamente el proceso de stem a estas palabras sin ningún otro tratamiento, los tiempos de ejecución de cada uno de los stemmers son:
+* Porter: 8.350780248641968 segundos.
+* Lancaster: 4.523569583892822 segundos.
+
+Se puede observar que el stemmer Lancaster corre casi en la mitad de tiempo que el Porter.
 
 <!---
 
