Avanzo con el ejercicio 5

--- a/TP_01/TP_01.md
+++ b/TP_01/TP_01.md
@@ -238,6 +238,10 @@ Unicamente leyendo linea a linea cada uno de los archivos de la colección, sepa
 
 Se puede observar que el stemmer Lancaster corre casi en la mitad de tiempo que el Porter.
 
+## ¿Qué conclusiones puede obtener de la ejecución de uno y otro?
+
+<!--- Ampliar con algún exprimento más, cosas que diga el articulo -->
+
 <!---
 
 Agregar allgun plot??
