Avances hasta el punto 7

--- a/TP_01/TP_01.md
+++ b/TP_01/TP_01.md
@@ -18,8 +18,6 @@ perro 644 6
 ...
 zorro 12 1
 
-##### Respuesta:
-
 Para resolver este ejercicio cree las siguientes clases:
 
 * Document
@@ -44,7 +42,7 @@ En caso de no querer utilizar un archivo de palabras vacias, simplemente correr 
 2) Cantidad de tokens y términos extraı́dos
 3) Promedio de tokens y términos de los documentos
 4) Largo promedio de un término
-5) Cantidad de tokens y términos del documento más corto y del más largo1
+5) Cantidad de tokens y términos del documento más corto y del más largo
 6) Cantidad de términos que aparecen sólo 1 vez en la colección
 
 ##### c) Un tercer archivo (frecuencias.txt, con un término y su CF por lı́nea) con:
@@ -52,12 +50,26 @@ En caso de no querer utilizar un archivo de palabras vacias, simplemente correr 
 1) La lista de los 10 términos más frecuentes y su CF (Collection Frequency)
 2) La lista de los 10 términos menos frecuentes y su CF.
 
+<!-- 
+
+Contar de donde saque las palabras vacias
+Por arriba como reslvi el codigo??
+Decisiones que tome.
+
+ -->
 
 
 
-2. Tomando como base el programa anterior, escriba un segundo T okenizer que implemente los criterios del
-artı́culo de Grefenstette y Tapanainen para definir qué es una “palabra” (o término) y cómo tratar números
-y signos de puntuación. Además, extraiga en listas separadas utilizando en cada caso una función especı́fica.
+2. Tomando como base el programa anterior, escriba un segundo T okenizer que implemente los criterios del artı́culo de Grefenstette y Tapanainen para definir qué es una “palabra” (o término) y cómo tratar números y signos de puntuación. Además, extraiga en listas separadas utilizando en cada caso una función especı́fica.
+
+<!-- 
+
+Falta terminar 
+
+-->
+
+<!-- 
+
 a) Abreviaturas tal cual están escritas (por ejemplo, Dr., Lic., S.A., NASA, etc.)
 
 Si quiero matchear abreviaturas como NASA, es inevitable que la expresión regular tambien matchee:
@@ -95,7 +107,7 @@ c) Números (por ejemplo, cantidades, teléfonos)
 d ) Nombres propios (por ejemplo, Villa Carlos Paz, Manuel Belgrano, etc.) y los trate como un único
 token.
 Genere y almacene la misma información que en el caso anterior.
-
+-->
 
 
 
@@ -240,40 +252,49 @@ Se puede observar que el stemmer Lancaster corre casi en la mitad de tiempo que 
 
 ## ¿Qué conclusiones puede obtener de la ejecución de uno y otro?
 
-<!--- Ampliar con algún exprimento más, cosas que diga el articulo -->
+<!--- Ampliar con algún exprimento más, cosas que diga el articulo o el libro-->
+
+
+## 5. Escriba un programa que realice la identificación del lenguaje de un texto a partir de un conjunto de entrenamiento. Pruebe dos métodos sencillos:
+
+## a) Uno basado en la distribución de la frecuencia de las letras.
+
+Cree un diccionario para cada uno de los archivos de train y las claves de este, son las letras de la "a" a la  "z". Lo inicialicé en 0, y luego conté la frecuencia de caracteres para cada uno de los 3 archivos.
+Por ultimo, leí linea a linea el archivo de test, contando la frecuencia de caracteres en cada una de estas, y verificando con cuales de los diciccionarios de train, tenia mayor coeficiente de correlación, siendo este el idioma estimado de la linea leida.
+
+Utilizando este método la precision del modelo es de 0.87.
+De 300 lineas, solo estimó de forma erronea 39.
+
+
+## b) El segundo, basado en calcular la probabilidad de que una letra x preceda a una y (calcule una  matriz de probabilidades con todas las combinaciones).
+
+Para este otro método, conté como válidas unicamente las combinaciones de caracteres donde ambos eran letras, o, una letra con un espacio, es decir, descarté numeros y simbolos.
+
+Lei los 3 archivos de train para obtener todos los posibles pares de letras, usando estas combinaciones, cree 3 diccionarios inicializados en 0. Lei cada uno de los archivos de train, contando la frecuencia de aparición del duo de caracteres, en los diccionarios.
+Finalmente, lei cada una de las lineas del archivo de test, agrupando de a 2 caracteres, contando la frecuencia de aparición, y verificando el coeficiente de correlación con los diccionarios.
+
+La precision del modelo es de 0.9833333333333333.
+De la totalidad de las lineas de test, unicamente el idioma de 5 fueron estimados de forma incorrecta.
+
+Hay un grupo de caracteres que fué leido en el conjunto de test, que no había aparecido en el conjunto de train: "rj". No fué incorporado como clave en los diccionarios de frecuencias.
+
+Una aclaración que tiene valor para ambos modelos, además de la ventaja de su sencillez, tienen muy buena precision para realizar la identificacion del lenguaje de un texto, más teniendo en cuenta que el largo promedio de las lineas del conjunto de test, es de unicamente 164 caracteres.
+
+## Compare los resultados contra el módulo Python langdetect y la solución provista.
+
+El accuracy de langdetect es de 0.66, de 300 lineas del conjunto de test, el idioma de 100 fué detectado de forma incorrecta. Se puede observar una precision significativamente menor a la de los dos modelos provistos anteriormente.
+
+# Propiedades del Texto (En notebook Jupyter).
+
+## 6. En este ejercicio se propone verificar la predicción de ley de Zipf. Para ello, descargue desde Project Gutenberg el texto del Quijote de Cervantes7 y escriba un programa que extraiga los términos y calcule sus frecuencias (el programa debe generar la lista ordenada por frecuencia descencente). Calcule la curva de ajuste utilizando la función Polyfit del módulo NumPy. Con los datos crudos y los estimados grafique en la notebook ambas distribuciones (haga 2 gráficos, uno en escala lineal y otro en log-log). ¿Cómo se comporta la predicción? ¿Qué conclusiones puede obtener?
+
+[prueba]()
+
+
 
 <!---
 
 Agregar allgun plot??
-
-3. A partir del programa del ejercicio 1, incluya un proceso de stemming 2 . Luego de modificar su programa,
-corra nuevamente el proceso del ejercicio 1 y analice los cambios en la colección. ¿Qué implica este resultado?
-Busque ejemplos de pares de términos que tienen la misma raı́z pero que el stemmer los trató diferente y
-términos que son diferentes y se los trató igual.
-4. Sobre la colección CISI3 , ejecute los stemmers de Porter y Lancaster provistos en el módulo nltk.stem.
-Compare: cantidad de tokens resultantes, resultado 1 a 1 y tiempo de ejecución para toda la colección. Qué
-conclusiones puede obtener de la ejecución de uno y otro?
-5. Escriba un programa que realice la identificación del lenguaje de un texto a partir de un conjunto de
-entrenamiento4 . Pruebe dos métodos sencillos:
-a) Uno basado en la distribución de la frecuencia de las letras.
-b) El segundo, basado en calcular la probabilidad de que una letra x preceda a una y (calcule una matriz
-de probabilidades con todas las combinaciones).
-Compare los resultados contra el módulo Python langdetect5 y la solución provista.
-Propiedades del Texto6 .
-6. En este ejercicio se propone verificar la predicción de ley de Zipf. Para ello, descargue desde Project Gu-
-tenberg el texto del Quijote de Cervantes7 y escriba un programa que extraiga los términos y calcule sus
-frecuencias (el programa debe generar la lista ordenada por frecuencia descencente). Calcule la curva de
-ajuste utilizando la función Polyfit del módulo NymPy8 . Con los datos crudos y los estimados grafique en la
-notebook ambas distribuciones (haga 2 gráficos, uno en escala lineal y otro en log-log). ¿Cómo se comporta
-la predicción? ¿Qué conclusiones puede obtener?
-7. Usando los datos del ejercicios anterior y de acuerdo a la ley de Zipf, calcule la proporción del total de
-términos para aquellos que tienen frecuencia f = {100, 1000, 10000}. Verifique respecto de los valores reales.
-¿Qué conclusión puede obtener?
-8. Codifique un script que reciba como parámetro el nombre de un archivo de texto, tokenize y calcule y
-escriba a un archivo los pares (#términos totales procesados, #términos únicos). Verifique en qué medida
-satisface la ley de Heaps. Grafique en la notebook los ajustes variando los parámetros de la expresión. Puede
-inicialmente probar con los archivos de los puntos anteriores.
-
 
 Si no es ninguna expresion regular, lo paso por el filtro de longitud de caracteres.
 
