Separo ej6 y 7, acomodo imagenes

--- a/TP_01/TP_01.md
+++ b/TP_01/TP_01.md
@@ -288,11 +288,30 @@ El accuracy de langdetect es de 0.66, de 300 lineas del conjunto de test, el idi
 
 ## 6. En este ejercicio se propone verificar la predicción de ley de Zipf. Para ello, descargue desde Project Gutenberg el texto del Quijote de Cervantes7 y escriba un programa que extraiga los términos y calcule sus frecuencias (el programa debe generar la lista ordenada por frecuencia descencente). Calcule la curva de ajuste utilizando la función Polyfit del módulo NumPy. Con los datos crudos y los estimados grafique en la notebook ambas distribuciones (haga 2 gráficos, uno en escala lineal y otro en log-log). ¿Cómo se comporta la predicción? ¿Qué conclusiones puede obtener?
 
-[prueba]()
+![log-log](https://raw.githubusercontent.com/AgustinNormand/recuperacion-de-informacion/main/TP_01/ejercicio_6/log-log.png)
+
+![lineal](https://raw.githubusercontent.com/AgustinNormand/recuperacion-de-informacion/main/TP_01/ejercicio_6/lineal.png)
+
+
+## 7
+
+Valores reales:
+
+* Proporción de terminos con frecuencia >= a 100 = 0.01720643408512657
+* Proporción de terminos con frecuencia >= a 1000 = 0.002069946957609211
+* Proporción de terminos con frecuencia >= a 10000 = 0.0001724955798007676
+
+Valores estimados:
+
+* Proporción de terminos con frecuencia >= a 100 = 0.0170339385053258
+* Proporción de terminos con frecuencia >= a 1000 = 0.00250118590711113
+* Proporción de terminos con frecuencia >= a 10000 = 0.0003449911596015352
 
 
 
 <!---
+
+Pasar todos los archivos por el formatter que pidieron. Back,
 
 Agregar allgun plot??
 
