Avanzo con el ejercicio 7

--- a/TP_01/ejercicio_7/ejercicio_7.ipynb
+++ b/TP_01/ejercicio_7/ejercicio_7.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "f066526a",
    "metadata": {
     "scrolled": false
@@ -71,33 +71,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "facd69ae",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def obtenerRectaAjustada(x, y):\n",
-    "    rectaAjuste = np.polyfit(x, y, 1)\n",
+    "from scipy.optimize import curve_fit\n",
     "\n",
-    "    rectaAjusteEcuacion = np.poly1d(rectaAjuste)\n",
-    "    rectaAjusteEvaluada = rectaAjusteEcuacion(x)\n",
+    "def func(x, a, b):\n",
+    "    return a*(x**b)\n",
     "\n",
-    "    return rectaAjusteEvaluada"
+    "popt, pcov = curve_fit(func, x, y)\n",
+    "y_pred = func(x, *popt)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "918f2559",
+   "execution_count": 28,
+   "id": "03cfa32b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = obtenerRectaAjustada(xlog, ylog)"
+    "rectaAjuste = np.polyfit(xlog, ylog, 1)\n",
+    "\n",
+    "pendiente = rectaAjuste[0]\n",
+    "\n",
+    "ordenadaAlOrigen = rectaAjuste[1]\n",
+    "\n",
+    "rectaAjusteEcuacion = np.poly1d(rectaAjuste)\n",
+    "y_pred_log = rectaAjusteEcuacion(xlog)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "id": "fda28d61",
    "metadata": {},
    "outputs": [
@@ -123,8 +130,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "id": "c30c2466",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Proporción de terminos con frecuencia >= a 100 = 0.04187330199663634\n",
+      "Proporción de terminos con frecuencia >= a 1000 = 0.0024580620121609385\n",
+      "Proporción de terminos con frecuencia >= a 10000 = 0.0001293716848505757\n"
+     ]
+    }
+   ],
+   "source": [
+    "frecuencies = [100, 1000, 10000]\n",
+    "for frequency in frecuencies:\n",
+    "    counter = 0\n",
+    "    for value in y_pred:\n",
+    "        if value >= frequency:\n",
+    "            counter += 1\n",
+    "    print(\"Proporción de terminos con frecuencia >= a {} = {}\".format(frequency, counter/len(terms)))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "503054a4",
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +175,7 @@
     "frecuencies = [100, 1000, 10000]\n",
     "for frequency in frecuencies:\n",
     "    counter = 0\n",
-    "    for value in y_pred:\n",
+    "    for value in y_pred_log:\n",
     "        if value >= np.log(frequency):\n",
     "            counter += 1\n",
     "    print(\"Proporción de terminos con frecuencia >= a {} = {}\".format(frequency, counter/len(terms)))"
